--- a/CSS/CSS-1/index.html
+++ b/CSS/CSS-1/index.html
@@ -8,14 +8,25 @@
 </head>
 <body>
   <div class="card">
-    <div class="name">Dark Magician Girl</div>
-    <div class="image">
+    <div class="header">
+      <div class="name">Dark Magician Girl</div>
+      <img class="attribute" src="dark.png" alt="dark">
+    </div>
+    <div class="level">
+      <img src="star.png" alt="star">
+      <img src="star.png" alt="star">
+      <img src="star.png" alt="star">
+      <img src="star.png" alt="star">
+      <img src="star.png" alt="star">
+      <img src="star.png" alt="star">
+    </div>
+    <div class="artwork">
       <img src="dark_magician_girl.jpg" alt="Dark Magician Girl">
     </div>
     <div class="details">
       <div class="type">[Spellcaster / Effect]</div>
       <div class="lore">This card gains 300 ATK for every "Dark Magician" or "Magician of Black Chaos" in either player's Graveyard.</div>
-      <div class="stats">ATK/ 2000 DEF/ 1700</div>
+      <div class="stats">ATK/2000&nbsp;&nbsp;DEF/1700</div>
     </div>
   </div>
 </body>
