Changed the directory structure

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <div class="card">
     <div class="header">
       <div class="name">Dark Magician Girl</div>
-      <img class="attribute" src="dark.png" alt="dark">
+      <img class="attribute" src="/Images/dark.png" alt="dark">
     </div>
     <div class="level">
-      <img src="star.png" alt="star">
-      <img src="star.png" alt="star">
-      <img src="star.png" alt="star">
-      <img src="star.png" alt="star">
-      <img src="star.png" alt="star">
-      <img src="star.png" alt="star">
+      <img src="Images/star.png" alt="star">
+      <img src="Images/star.png" alt="star">
+      <img src="Images/star.png" alt="star">
+      <img src="Images/star.png" alt="star">
+      <img src="Images/star.png" alt="star">
+      <img src="Images/star.png" alt="star">
     </div>
     <div class="artwork">
-      <img src="dark_magician_girl.jpg" alt="Dark Magician Girl">
+      <img src="Images/dark_magician_girl.jpg" alt="Dark Magician Girl">
     </div>
     <div class="details">
       <div class="type">[Spellcaster / Effect]</div>
